[package]
name = "notifier_hub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple cannal subscribtion system"
repository = "https://github.com/ZivoMartin/AsyncForge/tree/main/net_pulse"
homepage = "https://github.com/ZivoMartin/AsyncForge/tree/main/net_pulse"
readme = "README.md"
keywords = ["async", "subscribtion", "signal", "tokio", "notification"]
categories = ["asynchronous", "concurrency", "data-structures"]


[dependencies]
smart_channel = "0.1.1"
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["full"] }
