[package]
name = "task_forge"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A flexible and simple task pool for asynchronous execution"
repository = "https://github.com/ZivoMartin/AsyncForge/tree/main/task_forge"
homepage = "https://github.com/ZivoMartin/AsyncForge/tree/main/task_forge"
readme = "README.md"
keywords = ["async", "pool", "executor", "tokio", "concurrency"]
categories = ["asynchronous", "concurrency", "data-structures"]

[dependencies]
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.41"
