[package]
name = "asyncforge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A flexible and simple task pool for asynchronous execution"
repository = "https://github.com/ZivoMartin/AsyncForge"
homepage = "https://github.com/username/AsyncForge"
# documentation = "https://docs.rs/asyncforge"
readme = "README.md"

[dependencies]
thiserror = "2.0.9"
tokio = "1.42.0"
sync_tools = { path="../sync_tools" }
tracing = "0.1.41"
